zetasql/parser/testdata/pipe_pivot.test
# Most of these tests came from pivot.test, with cases involving combinations
# with JOIN, TVFs, subqueries, etc, removed as irrelevant.
# After we remove copybara stripping, we might combine these back into the
# main test file, with alternations on whether to add "|>".
[default language_features=NONE,+PIPES]

FROM t
|> PIVOT(SUM(a) FOR b IN (0, 1))
--
QueryStatement [0-39] [FROM t |>...IN (0, 1))]
  Query [0-39] [FROM t |>...IN (0, 1))]
    FromQuery [0-6] [FROM t]
      FromClause [0-6] [FROM t]
        TablePathExpression [5-6] [t]
          PathExpression [5-6] [t]
            Identifier(t) [5-6] [t]
    PipePivot [7-39] [|> PIVOT(SUM...IN (0, 1))]
      PivotClause [10-39] [PIVOT(SUM(a) FOR b IN (0, 1))]
        PivotExpressionList [16-22] [SUM(a)]
          PivotExpression [16-22] [SUM(a)]
            FunctionCall [16-22] [SUM(a)]
              PathExpression [16-19] [SUM]
                Identifier(SUM) [16-19] [SUM]
              PathExpression [20-21] [a]
                Identifier(a) [20-21] [a]
        PathExpression [27-28] [b]
          Identifier(b) [27-28] [b]
        PivotValueList [33-37] [0, 1]
          PivotValue [33-34] [0]
            IntLiteral(0) [33-34] [0]
          PivotValue [36-37] [1]
            IntLiteral(1) [36-37] [1]
--
FROM
  t
|> PIVOT(SUM(a) FOR b IN (0, 1))
==

# Multiple pivot exprs, single IN list item.
# Pivot output table has alias without AS here.
FROM t
|> PIVOT(SUM(a), SUM(b) FOR b IN (0)) pivot_table
--
QueryStatement [0-56] [FROM t |>...pivot_table]
  Query [0-56] [FROM t |>...pivot_table]
    FromQuery [0-6] [FROM t]
      FromClause [0-6] [FROM t]
        TablePathExpression [5-6] [t]
          PathExpression [5-6] [t]
            Identifier(t) [5-6] [t]
    PipePivot [7-56] [|> PIVOT(SUM...pivot_table]
      PivotClause [10-56] [PIVOT(SUM(...pivot_table]
        PivotExpressionList [16-30] [SUM(a), SUM(b)]
          PivotExpression [16-22] [SUM(a)]
            FunctionCall [16-22] [SUM(a)]
              PathExpression [16-19] [SUM]
                Identifier(SUM) [16-19] [SUM]
              PathExpression [20-21] [a]
                Identifier(a) [20-21] [a]
          PivotExpression [24-30] [SUM(b)]
            FunctionCall [24-30] [SUM(b)]
              PathExpression [24-27] [SUM]
                Identifier(SUM) [24-27] [SUM]
              PathExpression [28-29] [b]
                Identifier(b) [28-29] [b]
        PathExpression [35-36] [b]
          Identifier(b) [35-36] [b]
        PivotValueList [41-42] [0]
          PivotValue [41-42] [0]
            IntLiteral(0) [41-42] [0]
        Alias [45-56] [pivot_table]
          Identifier(pivot_table) [45-56] [pivot_table]
--
FROM
  t
|> PIVOT(SUM(a), SUM(b) FOR b IN (0)) AS pivot_table
==

# Pivot expressions can have aliases, with optional AS.
# Value expressions can have aliases, with optional AS.
# PIVOT output has alias, with AS here.
# Contained expressions can be complex expressions.
FROM t
|> PIVOT(SUM(a) AS sum_a, SUM(aa) sum_aa, 2+COUNT(b+3)
         FOR t.x IN (z, x+y xpy, 1 AS one)) AS p
--
QueryStatement [0-110] [FROM t |>...one)) AS p]
  Query [0-110] [FROM t |>...one)) AS p]
    FromQuery [0-6] [FROM t]
      FromClause [0-6] [FROM t]
        TablePathExpression [5-6] [t]
          PathExpression [5-6] [t]
            Identifier(t) [5-6] [t]
    PipePivot [7-110] [|> PIVOT(SUM...one)) AS p]
      PivotClause [10-110] [PIVOT(SUM(...one)) AS p]
        PivotExpressionList [16-61] [SUM(a) AS...COUNT(b+3)]
          PivotExpression [16-31] [SUM(a) AS sum_a]
            FunctionCall [16-22] [SUM(a)]
              PathExpression [16-19] [SUM]
                Identifier(SUM) [16-19] [SUM]
              PathExpression [20-21] [a]
                Identifier(a) [20-21] [a]
            Alias [23-31] [AS sum_a]
              Identifier(sum_a) [26-31] [sum_a]
          PivotExpression [33-47] [SUM(aa) sum_aa]
            FunctionCall [33-40] [SUM(aa)]
              PathExpression [33-36] [SUM]
                Identifier(SUM) [33-36] [SUM]
              PathExpression [37-39] [aa]
                Identifier(aa) [37-39] [aa]
            Alias [41-47] [sum_aa]
              Identifier(sum_aa) [41-47] [sum_aa]
          PivotExpression [49-61] [2+COUNT(b+3)]
            BinaryExpression(+) [49-61] [2+COUNT(b+3)]
              IntLiteral(2) [49-50] [2]
              FunctionCall [51-61] [COUNT(b+3)]
                PathExpression [51-56] [COUNT]
                  Identifier(COUNT) [51-56] [COUNT]
                BinaryExpression(+) [57-60] [b+3]
                  PathExpression [57-58] [b]
                    Identifier(b) [57-58] [b]
                  IntLiteral(3) [59-60] [3]
        PathExpression [75-78] [t.x]
          Identifier(t) [75-76] [t]
          Identifier(x) [77-78] [x]
        PivotValueList [83-103] [z, x+y xpy, 1 AS one]
          PivotValue [83-84] [z]
            PathExpression [83-84] [z]
              Identifier(z) [83-84] [z]
          PivotValue [86-93] [x+y xpy]
            BinaryExpression(+) [86-89] [x+y]
              PathExpression [86-87] [x]
                Identifier(x) [86-87] [x]
              PathExpression [88-89] [y]
                Identifier(y) [88-89] [y]
            Alias [90-93] [xpy]
              Identifier(xpy) [90-93] [xpy]
          PivotValue [95-103] [1 AS one]
            IntLiteral(1) [95-96] [1]
            Alias [97-103] [AS one]
              Identifier(one) [100-103] [one]
        Alias [106-110] [AS p]
          Identifier(p) [109-110] [p]
--
FROM
  t
|> PIVOT(SUM(a) AS sum_a, SUM(aa) AS sum_aa, 2 + COUNT(b + 3) FOR t.x IN (z, x + y AS xpy, 1 AS one)) AS p
==

FROM t
|> PIVOT
--
ERROR: Syntax error: Expected "(" but got end of statement [at 2:9]
|> PIVOT
        ^
==

FROM t
|> PIVOT()
--
ERROR: Syntax error: Unexpected ")" [at 2:10]
|> PIVOT()
         ^
==

FROM t
|> PIVOT(x)


# ERROR: Pivot clause with only pivot expr and FOR expr
FROM t
|> PIVOT(x FOR y)
--
ERROR: Syntax error: Expected "," or keyword FOR but got ")" [at 2:11]
|> PIVOT(x)
          ^
==

# ERROR: Empty IN-list
FROM t
|> PIVOT(x FOR y IN ())
--
ERROR: Syntax error: Unexpected ")" [at 2:22]
|> PIVOT(x FOR y IN ())
                     ^
==

# ERROR: Trailing comma in IN-list
FROM t
|> PIVOT(x FOR y IN (0,))
--
ERROR: Syntax error: Unexpected ")" [at 2:24]
|> PIVOT(x FOR y IN (0,))
                       ^
==

# ERROR: Missing right-parenthesis
FROM t
|> PIVOT(x FOR y IN (0)
--
ERROR: Syntax error: Expected ")" but got end of statement [at 2:24]
|> PIVOT(x FOR y IN (0)
                       ^
==

# ERROR: Missing pivot expression
FROM t
|> PIVOT(FOR y IN (0))
--
ERROR: Syntax error: Unexpected keyword FOR [at 2:10]
|> PIVOT(FOR y IN (0))
         ^
==

# ERROR: Trailing comma after last pivot expression
FROM t
|> PIVOT(SUM(x), SUM(y), FOR y IN (0))
--
ERROR: Syntax error: Unexpected keyword FOR [at 2:26]
|> PIVOT(SUM(x), SUM(y), FOR y IN (0))
                         ^
==

# PIVOT as alias of table produced by a PIVOT clause.
FROM t
|> PIVOT(a FOR b IN (c)) AS PIVOT
--
QueryStatement [0-40] [FROM t |>...) AS PIVOT]
  Query [0-40] [FROM t |>...) AS PIVOT]
    FromQuery [0-6] [FROM t]
      FromClause [0-6] [FROM t]
        TablePathExpression [5-6] [t]
          PathExpression [5-6] [t]
            Identifier(t) [5-6] [t]
    PipePivot [7-40] [|> PIVOT(a...) AS PIVOT]
      PivotClause [10-40] [PIVOT(a FOR b IN (c)) AS PIVOT]
        PivotExpressionList [16-17] [a]
          PivotExpression [16-17] [a]
            PathExpression [16-17] [a]
              Identifier(a) [16-17] [a]
        PathExpression [22-23] [b]
          Identifier(b) [22-23] [b]
        PivotValueList [28-29] [c]
          PivotValue [28-29] [c]
            PathExpression [28-29] [c]
              Identifier(c) [28-29] [c]
        Alias [32-40] [AS PIVOT]
          Identifier(PIVOT) [35-40] [PIVOT]
--
FROM
  t
|> PIVOT(a FOR b IN (c)) AS PIVOT
